# aptos_anniversary_nft_minting

./: Cargo.toml
src/: app.rs  constants.rs  main.rs  mint.rs  utils.rs
